# kanameshiki-rs

./: Cargo.toml  LICENSE  README.md
crates/KanameShiki/: Cargo.toml  README.md
crates/KanameShiki-sys/: Cargo.toml  README.md  build.rs
crates/KanameShiki-sys/src/: kanameshiki.hpp  lib.rs
crates/KanameShiki/src/: lib.rs
